# roswire

./: Cargo.toml  Makefile  README.md  README.zh-CN.md
.github/workflows/: ci.yml  codeql.yml  release.yml  routeros-integration.yml
docs/: develop-plan.md  feature-checklist.md  index.html  installation.html  installation.md  keychain-smoke.md  production-readiness.html  production-readiness.md  release.md  routeros-acceptance-matrix.md
docs/assets/: README.md  app.js  styles.css
scripts/: install.sh  routeros-acceptance.sh  routeros-ci-integration.sh  tag.sh
skills/roswire/: SKILL.md
skills/roswire/references/: connectivity-and-location.md  raw-readonly-playbook.md  routing-and-firewall-audit.md  schema-discovery.md  wireguard-and-users-audit.md
skills/roswire/scripts/: roswire-connectivity-report.sh  roswire-readonly-snapshot.sh  roswire-schema-tour.sh
src/: args.rs  error.rs  lib.rs  mapping.rs
src/config/: mod.rs
src/introspect/: cache.rs  discovery.rs  doctor.rs  mod.rs
src/protocol/: mod.rs  rest.rs  tls.rs
src/protocol/classic/: dialect.rs  login.rs  mod.rs  sentence.rs  transport.rs
src/transfer/: mod.rs
src/workflow/: mod.rs
tests/: cli_smoke.rs  config_rw.rs  introspect_static.rs  keychain_smoke.rs  transfer_dry_run.rs
tests/common/: mod.rs
