[package]
name = "roswire"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "JSON-first RouterOS CLI bridge for AI agents and automation."
repository = "https://github.com/AS153929/roswire"
readme = "README.md"
keywords = ["routeros", "cli", "automation", "networking", "agent"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
directories = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"