[package]
name = "roswire"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "JSON-first RouterOS CLI bridge for AI agents and automation."
homepage = "https://github.com/AS153929/roswire"
repository = "https://github.com/AS153929/roswire"
readme = "README.md"
keywords = ["routeros", "cli", "automation", "networking", "agent"]
categories = ["command-line-utilities", "network-programming"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh-CN.md",
    "/docs/**",
    "/roswire.png",
    "/src/**",
    "/tests/**",
]

[dependencies]
argon2 = "0.5"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
thiserror = "1"
toml = "0.8"
directories = "6"
md-5 = "0.10"
aes-gcm = "0.10"
keyring = "2"
rand = "0.8"
sha2 = "0.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
webpki-roots = "0.26"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = "z"
